<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/bold"
        android:gravity="start"
        android:text="@string/titleTextViewString"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstSpeedInput"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="@string/firstSpeedInputHintString"
        android:inputType="number"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textColor="#000000"
        android:textColorHighlight="#b0003a"
        android:textColorHint="#757575"
        android:textColorLink="#4B4B4B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/secondSpeedInput"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/light"
        android:hint="@string/secondSpeedInputString"
        android:inputType="number"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textColor="#000000"
        android:textColorHighlight="#b0003a"
        android:textColorHint="#757575"
        android:textColorLink="#4B4B4B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstSpeedInput"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/regular"
        android:gravity="start"
        android:singleLine="false"
        android:text="@string/tipTextViewString"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondSpeedInput" />

    <Button
        android:id="@+id/calButton"
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/BMWred"
        android:backgroundTint="@color/BMWreddark"
        android:fontFamily="@font/bold"
        android:onClick="calculate"
        android:text="@string/calButtonString"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipTextView" />

    <Button
        android:id="@+id/setButton"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/BMWred"
        android:backgroundTint="@color/BMWreddark"
        android:fontFamily="@font/bold"
        android:onClick="settings"
        android:text="Set"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/calButton"
        app:layout_constraintTop_toBottomOf="@+id/tipTextView"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/conclusionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/regular"
        android:gravity="start"
        android:text="@string/conclusionTextViewString"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleCLayout" />

    <TextView
        android:id="@+id/conclusionOutputTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/regular"
        android:gravity="start"
        android:text="@string/conclusionOutputTextViewString"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conclusionTextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleCLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calButton">

        <TextView
            android:id="@+id/firstSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:gravity="start"
            android:text="@string/firstSpeedTextViewString"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/firstReactionTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/regular"
            android:gravity="start"
            android:text="@string/firstReactionTimeTextViewString"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstSpeedTextView" />

        <TextView
            android:id="@+id/fullstopDistanceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/regular"
            android:gravity="start"
            android:text="@string/fullstopDistanceTextViewString"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstReactionTimeTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/firstMotoCLayout"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toEndOf="@+id/titleCLayout"
        app:layout_constraintTop_toBottomOf="@+id/calButton">

        <TextView
            android:id="@+id/firstSpeedOutputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:gravity="end"
            android:text="@string/firstSpeedOutputTextViewString"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/firstReactionTimeOutputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/regular"
            android:gravity="end"
            android:text="@string/firstReactionTimeOutputTextString"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstSpeedOutputText" />

        <TextView
            android:id="@+id/firstBrakingDistanceOutputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/regular"
            android:gravity="end"
            android:text="@string/firstFullstopDistanceOutputTextViewString"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/firstReactionTimeOutputText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/secondMotoCLayout"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calButton">

        <TextView
            android:id="@+id/secondSpeedOutputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:gravity="end"
            android:text="@string/secondSpeedOutputTextViewString"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/secondReactionTimeOutputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/regular"
            android:gravity="end"
            android:text="@string/secondReactionTimeOutputTextString"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/secondSpeedOutputText" />

        <TextView
            android:id="@+id/secondBrakingDistanceOutputText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/regular"
            android:gravity="end"
            android:text="@string/secondFullstopDistanceOutputTextViewString"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/secondReactionTimeOutputText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>